Module build support, plugins only loaded from plugins folder via ServiceLoader. Version file adjustments.